# posty

backend/: .env  Cargo.toml  docker-compose.yaml  readme.md
backend/migration/src/: lib.rs  m20250221_232402_create_users_table.rs
backend/src/: db.rs  lib.rs  main.rs
backend/src/services/: mod.rs
backend/src/services/auth/: auth_handler.rs  endpoints.rs  mod.rs  models.rs
backend/src/services/auth/models/: users.rs
frontend/: bun.lockb
frontend/src/app/: error.tsx
frontend/src/app/home/: page.tsx
