[package]
name = "posty"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
hyper = "1.6.0"
sea-orm = { version = "1.1.5", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }

[dependencies.uuid]
version = "1.14.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
