[package]
name = "posty"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
hyper = "1.6.0"
sea-orm = { version = "1.1.5", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = "1.1.5"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
dotenvy = "0.15.6"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
uuid = { version = "1.14.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
